# asciinema-player

./: .eslintrc.js  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Gruntfile.coffee  Gruntfile.js  LICENSE  Makefile  Procfile  README.md  Vagrantfile  build.ps1  code_of_conduct.md  flake.nix  gen-png.html  gen-png.js  gen-png.sh  index.d.ts  index.html  index.js  index.js.bak  index2.html  justfile  package-lock.json  package.json  playwright.config.js  project.clj  react.html  rollup.config.bundle.js  rollup.config.bundle.mjs  rollup.config.js  rollup.config.mjs
.github/: .npmrc
.github/ISSUE_TEMPLATE/: bug-report.yml  bug_report.md
.github/workflows/: build.yml  prerelease.yml  release.yml
demo/: 7443-stdout.json  index-dev.html  index.html  react.html  svg-icons-test.html
dev/clj/: user.clj
docs/: INLINE-IMAGES.md
driver/: asciicast.js  phoenix_channel.js  test.js  websocket.js
env/test/: unit-test.html
public/: benchmark.html
resources/: .npmignore  index.html  license.js
resources/public/: 20055.json  21195.json  CustomEvent.js  benchmark.html  cards.html  codepoint-polyfill.js  debug.html  element.html  element.js  frames-21195.json  frames-26491.json  frames-color-test.json  frames.json  index.html  release-element.html  release.html  usage.html
src/: buffer.js  clock.js  colors.js  core.js  dummy_logger.js  error.js  index.d.ts  index.js  keystrokes.js  logging.js  lzw.js  opts.js  queue.js  stream.js  theme.js  ui.js  util.js  view.js  vt.js  worker.js
src/asciinema/: vt.cljc  vt_macros.clj
src/colors/: rgb.json
src/components/: AsciinemaPlayer.js  ControlBar.js  ErrorOverlay.js  HelpOverlay.js  ImageOverlay.js  InfoOverlay.js  Keystrokes.js  KeystrokesOverlay.js  Line.js  LoaderOverlay.js  OfflineOverlay.js  Player.js  Segment.js  StartOverlay.js  Subtitles.js  Terminal.js
src/driver/: asciicast.js  benchmark.js  clock.js  eventsource.js  phoenix_channel.js  random.js  test.js  (+3 more)
src/vt/: Cargo.toml
src/vt/src/: lib.rs
test/: clock_test.js  line_test.js  part_test.js  progress_bar_test.js  terminal_test.js  test.coffee  test.html
tests/: basic.spec.js  index.html  player.spec.js
vt-js/: .gitignore  Cargo.toml  LICENSE_MIT  webpack.config.js.off
(+216 files in other folders)
