[package]
name = "vt-js"
version = "0.1.0"
authors = ["Marcin Kulik <m@ku1ik.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wee_alloc"]
wee_alloc = []

[dependencies]
avt = "0.16.0"
serde = { version = "1.0.130", features = ["derive"], default-features = false }
serde-wasm-bindgen = "0.6.5"
wee_alloc = "0.4"



[dependencies.wasm-bindgen]
version = "0.2.106"
features = ["serde-serialize"]


[dev-dependencies]
wasm-bindgen-test = "^0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
strip = true
